--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <RootNamespace>ErikTheCoder.Tests</RootNamespace>
-    <AssemblyName>ErikTheCoder.Tests</AssemblyName>
+    <RootNamespace>ErikTheCoder.Utilities.Tests</RootNamespace>
+    <AssemblyName>ErikTheCoder.Utilities.Tests</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
